infra/kube/talos_infrastructure/gitops/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret
            namespace: traefik
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh
      port: 2222
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: All
    - name: ssh-reverse-tunnel
      port: 2223
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: All
